tests/0038-property-set-evaluation-order.src.err
ERROR: undefined variable 'undefined1'
 | undefined1.bar = undefined2;
   ^
