tests/0038-property-set-evaluation-order.src
undefined1.bar = undefined2;